--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,14 +13,16 @@
 #
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
-secrets:
-  TEST_SECRET:
-    vault:  jobpass/foo/bar
-
-stages:          # List of stages for jobs, and their order of execution
+stages:       
+  - secrets
   - build
   - test
   - deploy
+
+
+secrets:
+  TEST_SECRET:
+    vault:  jobpass/foo/bar
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
