--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,15 +14,28 @@
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
 stages:       
-  - secrets
+  - read_secrets
   - build
   - test
   - deploy
 
-
-secrets:
-  TEST_SECRET:
-    vault:  jobpass/foo/bar
+read_secrets:
+  script:
+    # Check job's ref name
+    - echo $CI_COMMIT_REF_NAME
+    # and is this ref protected
+    - echo $CI_COMMIT_REF_PROTECTED
+    # Vault's address can be provided here or as CI/CD variable
+    - export VAULT_ADDR=https://vault.jobpass.io
+    # Authenticate and get token. Token expiry time and other properties can be configured
+    # when configuring JWT Auth - https://www.vaultproject.io/api/auth/jwt#parameters-1
+    - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=jobpass-development jwt=$CI_JOB_JWT)"
+    # Now use the VAULT_TOKEN to read the secret and store it in an environment variable
+    - export NAME="$(vault kv get -field=name jobpass/ops/development/back/config)"
+    # Use the secret
+    - echo $PASSWORD
+    # # This will fail because the role myproject-staging can not read secrets from secret/myproject/production/*
+    # - export PASSWORD="$(vault kv get -field=password secret/myproject/production/db)"
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
