Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,5 +8,7 @@ secrets:
     - echo $CI_COMMIT_REF_NAME
     - echo $CI_COMMIT_REF_PROTECTED
     - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=jobpass-development jwt=$CI_JOB_JWT)"
-    - export NAME="$(vault kv get -field=name jobpass/ops/development/back/config)"
-    - echo $NAME
+    - export FIREBASE="$(vault kv get -field=firebase jobpass/ops/development/back/config)"
+    - echo $FIREBASE
+    - export CONFIG="$(vault kv get -format=yaml jobpass/ops/development/back/config)"
+    - echo $CONFIG
