Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ secrets:
     - export FIREBASE="$(vault kv get -format=json -field=firebase jobpass/ops/development/back/config)"
     - echo $FIREBASE
     - export CONFIG="$(vault kv get -field=data -format=yaml jobpass/ops/development/back/config)"
-    - echo $CONFIG > test
+    - echo -e $CONFIG > test
     - cat test
     - echo "$CONFIG"
     - cat "$CONFIG"
