--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,6 @@
 stages:       
   - secrets
   - test
-  - test1
-  - test2
 
 secrets:
   stage: secrets
@@ -31,7 +29,7 @@ test:
 
 
 test1:
-  stage: test
+  stage: test1
   script:
     - echo "$CONFIG" > test
     - cat test
