--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,43 +4,28 @@ stages:
   - test1
 
 variables:
-  CONFIG: "test"
+  CONFIG: $CONFIG
+
+
 secrets:
   stage: secrets
   image: vault
-  secrets:
-    TEST:
-          vault: myproject/staging/db/password@secret
-  script:
-    - echo $CI_COMMIT_REF_NAME
-    - echo $CI_COMMIT_REF_PROTECTED
-    - if [[  "$CI_COMMIT_REF_NAME" == "master" ]]
-    - then echo works
-    - fi
+  variables:
+    CONFIG: $CONFIG
+  before_script:
     - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=jobpass-development jwt=$CI_JOB_JWT)"
-    - CONFIG="$(vault kv get -field=data -format=yaml jobpass/ops/development/back/config)"
-    - echo "$CONFIG" > test
-    - cat test
-    - echo "${CONFIG}" > test
-    - cat test
-    - echo $TEST
-
+    - export CONFIG="$(vault kv get -field=data -format=yaml jobpass/ops/development/back/config)"
+  script:
+    - echo "$CONFIG" 
 
 test:
   stage: test
   script:
-    - echo "$CONFIG" > test
-    - cat test
-    - echo "${CONFIG}" > test
-    - cat test
-
+    - echo "$CONFIG"
 
 test1:
   stage: test1
   script:
-    - echo "$CONFIG" > test
-    - cat test
-    - echo "${CONFIG}" > test
-    - cat test
+    - echo "$CONFIG"
 
 
