Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ secrets:
   stage: secrets
   image: vault
   variables:
-    CONFIG: $CONFIG
+    CONFIG: "$(vault kv get -field=data -format=yaml jobpass/ops/development/back/config)"
   before_script:
     - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=jobpass-development jwt=$CI_JOB_JWT)"
     - export CONFIG="$(vault kv get -field=data -format=yaml jobpass/ops/development/back/config)"
